fixed min-height for video to not overlap at shrink, and fixed padding at portfolio with max-width of h2

--- a/src/components/content/HeroSection.module.css
+++ b/src/components/content/HeroSection.module.css
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   object-fit: cover;
   z-index: -1;
 }
