--- a/src/components/content/PortfolioSection.module.css
+++ b/src/components/content/PortfolioSection.module.css
@@ -11,7 +11,7 @@
   font-family: 'TheCalonue';
   font-weight: bold;
   letter-spacing: 0.3rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   display: flex;
   align-items: center;
 }
@@ -27,6 +27,7 @@
   }
   display: flex;
   gap: 2rem;
+  overflow: hidden;
 }
 
 @keyframes moving {
@@ -86,11 +87,30 @@
     flex: 1 1 calc(50% - 10px);
     max-width: calc(50% - 10px);
   }
+
+  .h2 {
+    font-size: 6.5rem;
+  }
+
+  .arrow {
+    width: 80px;
+    height: 80px;
+    align-items: center;
+  }
 }
 
 @media (max-width: 540px) {
   .card {
     flex: 1 1 100%;
     max-width: 100%;
+  }
+
+  .h2 {
+ font-size: 4.5rem;
+  }
+
+  .arrow {
+    width: 60px;
+    height: 60px;
   }
 }
